...
const Onboarding = ({ finishOnboarding }: Props) => {
  const C = useThemeColors();
  const { fontsLoaded, fonts } = useCustomFonts();
  const SkipButton = (props: any) => (
    <Pressable
      {...props}
      testID="onboarding-skip"
      accessibilityLabel={onboardingData.buttons.skip}
      accessibilityRole="button"
      accessibilityHint={onboardingData.accessibility.skipTutorial}
      style={[
        {
          paddingHorizontal: 20,
...
